--- a/src/css/components/helper.css
+++ b/src/css/components/helper.css
@@ -12,3 +12,15 @@
          lg:max-w-[2094px] lg:px-[118px]
          xl:max-w-[1152px] xl:px-[0px]
 }
+
+.btn-back {
+  @apply fixed top-[200px] left-0 z-50 flex items-center gap-2 px-[30px] py-2 bg-blue-400 text-white font-medium transition-all duration-300 ease-in-out hover:bg-blue-500 hover:pl-[25px];
+  
+  & span {
+    @apply transition-transform duration-300 ease-in-out;
+  }
+
+  &:hover span {
+    @apply -translate-x-1;
+  }
+}
